[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/bitmgothic/Bitmgothic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/GUI/AnimatedText.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/MessagePopup.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/panel.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="MessagePopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderMargin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="NinePatchRect" parent="BorderMargin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 160.0
texture = ExtResource( 4 )
patch_margin_left = 28
patch_margin_top = 24
patch_margin_right = 30
patch_margin_bottom = 23
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="TextMargin" type="MarginContainer" parent="BorderMargin/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 24
custom_constants/margin_left = 32
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedText" parent="BorderMargin/Panel/TextMargin" instance=ExtResource( 2 )]
margin_left = 32.0
margin_top = 24.0
margin_right = 224.0
margin_bottom = 104.0
